Homepage alignment issues resolved!

--- a/hub/static/css/grid.css
+++ b/hub/static/css/grid.css
@@ -18,7 +18,7 @@ body {
   width: 330px;
   /*height: 300px;*/
   padding: 2px;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   border: 0;
       
 }
@@ -122,4 +122,23 @@ footer p {
 	font-family: sans-serif;
 	font-size: 13px;
 	color: gray;
+}
+
+#wrapper {
+    margin: 0 auto; /* to make the div center align to the browser */
+    text-align: center;
+}
+#wrapper ul {
+    padding: 10px;
+    display: inline-block;
+}
+#wrapper ul li {
+    color: #fff;
+    display: inline-block;
+    margin: 0 20px 0 0;
+}
+#wrapper ul li:last-child {
+    color: #fff;
+    display: inline-block;
+    margin: 0;
 }
